# platform.hardware.google.aemu

./: .gitignore  Android.bp  CMakeLists.txt
CMake/: Version.cmake  aemu_base.pc.in  aemu_base_testing_support.pc.in  aemu_host_common.pc.in  aemu_host_common_testing_support.pc.in  aemu_logging.pc.in  aemu_snapshot.pc.in  gfxstream_snapshot.pc.in  logging_base.pc.in
base/: Android.bp  CLog.cpp  CMakeLists.txt  CompressingStream.cpp  DecompressingStream.cpp  FileUtils.cpp  FunctorThread.cpp  HealthMonitor.cpp  HealthMonitor_unittest.cpp  MemStream.cpp  MemoryTracker.cpp  MessageChannel.cpp  Metrics.cpp  PathUtils.cpp  SharedLibrary.cpp  SharedMemory_posix.cpp  SharedMemory_unittest.cpp  SharedMemory_win32.cpp  StdioStream.cpp  Stream.cpp  StreamSerializing.cpp  StringParse_unittest.cpp  SubAllocator.cpp  SubAllocator_unittest.cpp  System.cpp  Thread_pthread.cpp  Thread_win32.cpp  Tracing.cpp  Win32UnicodeString.cpp  Win32UnicodeString_unittest.cpp  ring_buffer_unittest.cpp  system-native-mac.mm
base/include/aemu/base/: Debug.h  FunctionView.h  HealthMonitor.h  Log.h  Metrics.h  Optional.h  ProcessControl.h  Profiler.h  RateLimiter.h  Result.h  Stopwatch.h  Uri.h  address_space.h  msvc.h
base/include/aemu/base/async/: AsyncReader.h  AsyncWriter.h  DefaultLooper.h  Looper.h  ScopedSocketWatch.h  SubscriberList.h  ThreadLooper.h
base/include/aemu/base/containers/: BufferQueue.h
base/include/aemu/base/files/: IniFile.h  InplaceStream.h  MemStream.h  PathUtils.h  ScopedFileHandle.h  ScopedRegKey.h  Stream.h
base/include/aemu/base/logging/: CLog.h  Log.h  LogFormatter.h  LogSeverity.h  LogTags.h
base/include/aemu/base/memory/: ContiguousRangeMapper.h  ScopedPtr.h
base/include/aemu/base/process/: Command.h  Process.h
base/include/aemu/base/sockets/: ScopedSocket.h  SocketDrainer.h  SocketErrors.h  SocketUtils.h  SocketWaiter.h
base/include/aemu/base/synchronization/: ConditionVariable.h  Event.h  Lock.h  MessageChannel.h
base/include/aemu/base/system/: System.h  system-native-mac.mm
base/include/aemu/base/testing/: TestSystem.h  TestTempDir.h  Utils.h
base/include/aemu/base/threads/: FunctorThread.h  Thread.h  WorkerThread.h
base/include/aemu/base/utils/: stream.h
base/include/base/: HealthMonitor.h  Metrics.h  SharedMemory.h
base/include/base/containers/: BufferQueue.h  EntityManager.h  HybridComponentManager.h  HybridEntityManager.h  StaticMap.h
base/include/base/files/: CompressingStream.h  DecompressingStream.h  MemStream.h  PathUtils.h  StdioStream.h  Stream.h  StreamSerializing.h
base/include/base/logging/: CLog.h  Log.h  LogFormatter.h
base/include/base/synchronization/: ConditionVariable.h  MessageChannel.h
base/include/base/threads/: FunctorThread.h  Thread.h  ThreadPool.h  WorkerThread.h
base/testing/: TestSystem.h  TestTempDir.h  file_io.cpp
build-config/gfxstream/: CMakeLists.txt
build-config/qemu-android/: CMakeLists.txt
host-common/: Android.bp  AndroidPipe.cpp  CMakeLists.txt  DmaMap.cpp  GfxstreamFatalError.cpp  GfxstreamFatalError_unittest.cpp  GoldfishDma.cpp  HostGoldfishPipe.cpp  MediaH264DecoderDefault.cpp  MediaH264DecoderFfmpeg.cpp  MediaH264DecoderGeneric.cpp  MediaVpxDecoder.cpp  MediaVpxDecoderGeneric.cpp  RenderDoc_unittest.cpp  address_space_device.cpp  address_space_graphics.cpp  address_space_graphics_unittests.cpp  address_space_host_memory_allocator.cpp  address_space_shared_slots_host_memory_allocator.cpp  feature_control.cpp  goldfish_sync.cpp  logging_unittest.cpp  misc.cpp  opengles.cpp  vm_operations.cpp
host-common/include/host-common/: AddressSpaceService.h  AndroidPipe.h  DeviceContextRunner.h  DmaMap.h  FeatureControl.h  FeatureControlDefGuest.h  FeatureControlDefHost.h  Features.h  GfxstreamFatalError.h  GoldfishDma.h  GoldfishSyncCommandQueue.h  HostGoldfishPipe.h  HostmemIdMapping.h  MediaCodec.h  MediaHostRenderer.h  MediaSnapshotHelper.h  MediaSnapshotState.h  MultiDisplay.h  MultiDisplayPipe.h  address_space_device.hpp  address_space_graphics.h  address_space_graphics_types.h  android_pipe_device.h  android_pipe_host.h  crash-handler.h  dma_device.h  emugl_vm_operations.h  feature_control.h  goldfish_pipe.h  hw-config-defs.h  hw-config-helper.h  hw-lcd.h  linux_types.h  logging.h  misc.h  multi_display_agent.h  opengles.h  vm_operations.h  window_agent.h
host-common/opengl/: EmuglBackendList.cpp  EmuglBackendScanner.cpp  GLProcessPipe.cpp  GpuFrameBridge.cpp  NativeGpuInfo_linux.cpp  NativeGpuInfo_windows.cpp  OpenglEsPipe.cpp  emugl_config.cpp  gpuinfo.cpp  logger.cpp
host-common/testing/: HostAddressSpace.cpp
snapshot/: Android.bp  CMakeLists.txt  TextureLoader.cpp  TextureSaver.cpp
snapshot/include/snapshot/: LazySnapshotObj.h  TextureLoader.h  TextureSaver.h
